--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <body>
   <h1>Práctica DNS</h1>
   <p>Alumno: Fidel</p>
-  <p>Hola Diego y Marco :-)</p>
+  <p>Aquí va un chiste</p>
+<div id="joke">Cargando…</div>
+
+<script>
+(async () => {
+  const r = await fetch("./assets/joke.json", { cache: "no-store" });
+  const d = await r.json();
+  document.getElementById("joke").innerHTML = `
+    <p>${d.joke}</p>
+    <small>Actualizado: ${new Date(d.timestamp).toLocaleString()}</small>
+  `;
+})();
+</script>
+
 </body>
 </html>
